--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -29,6 +29,7 @@ li {
 .md-typeset__table {
     padding: 0 !important;
     margin: 0 !important;
+    width: 100% !important;
 }
 
 .md-typeset__scrollwrap {
