--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -18,13 +18,13 @@ h5 {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-.md-content ul,
+/* .md-content ul,
 .md-content li {
     margin: 0 !important;
     list-style-position: inside;
     list-style-type: square !important;
     text-align: justify;
-}
+} */
 
 .md-typeset__table {
     padding: 0 !important;
@@ -42,6 +42,27 @@ h5 {
 
 a.md-tag {
     border-radius: 2px !important;
+}
+
+/**
+* LISTS.
+*/
+
+li {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+.md-content ul {
+    list-style-type: square !important;
+}
+
+.md-content ul ul {
+    list-style-type: "\25B8" !important;
+}
+
+.md-content ul ul ul {
+    list-style-type: disc !important;
 }
 
 /**
