Add search.boost metadata to boost profiles pages

--- a/scripts/templates/profile.html
+++ b/scripts/templates/profile.html
@@ -11,6 +11,10 @@ tags:
 - No Rules
 {%- endif %}
 ---
+---
+search:
+  boost: 2
+---
 
 ![{{ name }}](https://placehold.co/800x250?text={{ name }})
 
